--- a/AdamsMultiTool.CLI/AdamsMultiTool.CLI.csproj
+++ b/AdamsMultiTool.CLI/AdamsMultiTool.CLI.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.45" />
+      <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.45" />
+    </ItemGroup>
+
 </Project>
