--- a/AdamsMultiTool.CLI/AdamsMultiTool.CLI.csproj
+++ b/AdamsMultiTool.CLI/AdamsMultiTool.CLI.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
       <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.45" />
       <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.45" />
     </ItemGroup>
