--- a/AdamsMultiTool.CLI/AdamsMultiTool.CLI.csproj
+++ b/AdamsMultiTool.CLI/AdamsMultiTool.CLI.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.45" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AdamsMultiTool.Core\AdamsMultiTool.Core.csproj" />
+    </ItemGroup>
+
 </Project>
